--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 body {
 	line-height: 1.5;
-	background-color: var(--body-color);
+	background-color: #efefef;
 	overflow-x: hidden;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -405,6 +405,8 @@ a {
 	width: calc(100% / 4);
 	border: 1px solid #000;
 	position: relative;
+box-shadow: 5px 10px #fff;
+}
 }
 
 .trending-card-img {
