--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ a {
 	line-height: 1.04615;
 	text-transform: uppercase;
 	width: 100%;
-	font-family: "logo-font", sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 /* .img-slider .slide .info h2::before {
